## Process this file with automake to produce Makefile.in

dist_x86_DATA = \
	gentoo-sources \
	gentoo-sources-M586.patch \
	gentoo-sources-M686.patch \
	gentoo-sources-MCORE2.patch \
	gentoo-sources-MK6.patch \
	gentoo-sources-MK7.patch \
	gentoo-sources-MK8.patch \
	gentoo-sources-MPENTIUM4.patch \
	gentoo-sources-MPENTIUMII.patch \
	gentoo-sources-MPENTIUMIII.patch \
	gentoo-sources-MPENTIUMM.patch \
	gentoo-sources-MATOM.patch \
	zen-sources \
	zen-sources-M586.patch \
	zen-sources-M686.patch \
	zen-sources-MCORE2.patch \
	zen-sources-MK6.patch \
	zen-sources-MK7.patch \
	zen-sources-MK8.patch \
	zen-sources-MPENTIUM4.patch \
	zen-sources-MPENTIUMII.patch \
	zen-sources-MPENTIUMIII.patch \
	zen-sources-MPENTIUMM.patch \
	zen-sources-MATOM.patch
