## Process this file with automake to produce Makefile.in

dist_x86_64_DATA = \
	gentoo-sources \
	gentoo-sources-MCORE2.patch \
	gentoo-sources-MK8.patch \
	gentoo-sources-MPENTIUM4.patch \
	gentoo-sources-MATOM.patch \
	zen-sources \
	zen-sources-MCORE2.patch \
	zen-sources-MK8.patch \
	zen-sources-MK10.patch \
	zen-sources-MATOM.patch \
	zen-sources-MPENTIUM4.patch
